KeepassDX (2.5.0.0beta10)
 * Upgrade translations
 * Fix classic dark theme
 * Add Material Icon Pack to the Free version
 * Fix bugs

KeepassDX (2.5.0.0beta9)
 * Education Screens to learn how to use the app
 * New designs
 * New custom font for character visibility
 * New themes
 * New icon pack
 * Change setting organisation
 * Pro version

KeepassDX (2.5.0.0beta8)
 * Hide custom entries protected
 * Best management of field references (https://keepass.info/help/base/fieldrefs.html)
 * Change database / default settings
 * Add Autofill for search
 * Add sorting by last access and by creation time
 * Rebuild custom entries
 * Refactor old code
 * Fix bugs

KeepassDX (2.5.0.0beta7)
 * Rebuild Notifications
 * Change links to https
 * Add extended Ascii (ñæËÌÂÝÜ...)
 * Upgrade custom visibility font
 * Best fingerprint error management
 * Add setting to prevent the password copy
 * Fix bugs

KeepassDX (2.5.0.0beta6)
 * Fix crash

KeepassDX (2.5.0.0beta5)
 * Autofill (Android O)
 * Deletion for group
 * New sorts with (Asc/Dsc, Groups before or after)
 * Better permission management with dialog at runtime
 * Setting to change font of field (monospace for a better visibility)
 * Open kdbx and kdb files from file browser
 * Change sort of fields
 * Hide empty fields
 * Add copy button for Username / Password and extra field
 * Add 5, 10, 20 seconds and 15 minutes of clipboard timeout
 * Hide "show password" icon when password not present
 * New animations for add button
 * New list to add and delete node with animation
 * Change view for better cohesion
 * Upgrade translations
 * Fix crash for API < Kitkat
 * Fix fingerprint bugs
 * Fix many small bugs
 * Add recycle bin setting (not yet accessible)

KeepassDX (2.5.0.0beta4)
 * Show only file name
 * Setting for full path
 * Add information for each database file
 * Setting to delete fingerprints
 * Solve bugs when change fingerprint
 * Delete view assignment for fingerprint opening
 * Merge KeePassDroid 2.2.1
