@@ -23,6 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerVertical="true"
+        android:layout_marginStart="12dp"
         android:layout_marginEnd="12dp"
         android:layout_toStartOf="@+id/fingerprint_image"
         style="@style/KeepassDXStyle.TextAppearance.DefaultTextOnPrimary"
