@@ -1,4 +1,5 @@
  * Mise à jour des traductions
  * Correction du thème sombre classic
  * Ajout du Pack d'Icones Material à la version gratuite
+ * Mise à jour de l'état de l'empreinte digitale avec la boite à cocher
  * Corrections de bugs
