@@ -2,6 +2,7 @@ KeepassDX (2.5.0.0beta10)
  * Upgrade translations
  * Fix classic dark theme
  * Add Material Icon Pack to the Free version
+ * Update fingerprint state with checkbox
  * Fix bugs
 
 KeepassDX (2.5.0.0beta9)
